# HDRICalibrationTool

./: -a  .gitignore  .gitmodules  HDRICalibrationTool-windows.spec  HDRimage.hdr  README.md  README_DEV.md  about.txt  binary_paths.json  changelog.txt  image_preview.py  image_uploader.py  info.py  jest.config.js  macosinstall  macosrun  main.py  next.config.js  package-lock.json  package.json  progress_window.py  requirements.txt  settings.json  tailwind.config.ts  tsconfig.json  ui_functions.py  ui_main.py  upload_file_region.py  upload_image_region.py
.github/workflows/: build.yml  publish-macos-signed.yml  publish.yml  test-on-pr-and-push.yml  test-on-pr.yml
__tests__/: page.test.jsx
app/: package-lock.json  package.json
example/: NDfilter_transform.cal  fisheye_corr.cal  response_function.rsp  vignetting.cal
examples/outputs/: FinalHDRimage_falsecolor.hdr
extra/: ldr-to-hdr.sh  ldr_images_selection.R
licenses/: BSD-3-Clause.txt  LGPL-2.1.txt
src/: helper.py  progress_window.py
src-docs/: package-lock.json  package.json
src-tauri/: .gitignore  2  Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/binaries/: dcraw_emu-universal-apple-darwin  dcraw_emu-x86_64-unknown-linux-gnu  hdrgen-aarch64-apple-darwin  hdrgen-x86_64-unknown-linux-gnu
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs  delete_config.rs  display_hdr_img.rs  get_default_output_path.rs  get_saved_configs.rs  hdr_image_help.rs  main.rs  merge_exposures.rs  nullify_exposure_value.rs  pipeline.rs  query_os_platform.rs  raw_image_help.rs  read_binary_paths.rs  read_dynamic_dir.rs  read_header.rs  read_host_file.rs  save_config.rs  vendored_binaries.rs  write_binary_paths.rs  write_host_file.rs
src-tauri/src/image_cache/: mod.rs
src-tauri/src/pipeline/: crop.rs  evalglare.rs  falsecolor.rs  header_editing.rs  merge_exposures.rs  neutral_density.rs  nullify_exposure_value.rs  photometric_adjustment.rs  projection_adjustment.rs  resize.rs  vignetting_effect_correction.rs
src/app/: cropping-resizing-view-settings.tsx  derive-view-settings.tsx  global-types.ts  globals.css  images.tsx  init.tsx  layout.tsx  load-config-dialog.tsx  navigation.tsx  number-input.tsx  page.tsx  pipeline-status-context.tsx  progress.tsx  response_and_correction.tsx  (+5 more)
styles/: image_preview_styles.css  main_styles.css  upload_file_region_styles.css  upload_image_region_styles.css
(+107 files in other folders)
