[package]
name = "app"
version = "2.0.0"
description = "GUI to calibrate HDR images using Radiance, hdrgen, and dcraw_emu."
authors = ["Clotilde Pierson", "Alexander Ulbrich"]
license = "GNU General Public License v3.0"
repository = "https://github.com/radiantlab/HDRICalibrationTool"
default-run = "app"
edition = "2021"
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.0", features = [ "window-create", "fs-read-dir", "fs-copy-file", "fs-create-dir", "fs-exists", "fs-read-file", "fs-write-file", "path-all", "os-all", "app-show", "app-hide", "dialog-all", "protocol-all"] }
chrono = "0.4.38"
time = "0.3.36"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
